WindowService: makes SetWindowVisibility() return false on failure

In particular, ash has WindowObservers that override OnWindowVisibilityChanged()
and force the window visibility back to what it was. This patch makes the
WindowService deal with this.

BUG=910241
TEST=covered by tests

Change-Id: I4fcd26cd8283aa38ee157f0d9c7831af68e867db
Reviewed-on: https://chromium-review.googlesource.com/c/1375993
Commit-Queue: Scott Violet <sky@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616381}
Former-commit-id: 01208718fb14954d7e93da0c900968b8707c3b67